--- a/logo.html
+++ b/logo.html
@@ -8,6 +8,19 @@
 </head>
 <body>
 
+    <div id="category-wrapper">
+        <label for="logo-categories">Select a Category</label>
+        <select name="categories" id="logo-categories">
+            <option value="">--Please select a Category--</option>
+            <option value="Companies">Companies</option>
+            <option value="Landmarks">Landmarks</option>
+            <option value="Baseball">Baseball</option>
+            <option value="Basketball">Basketball</option>
+            <option value="Football">Football</option>
+            <option value="Hockey">Hockey</option>
+        </select>
+    </div>
+
     <div id="logos-container">
         <div class="logo-container"></div>
         <div class="logo-container"></div>
@@ -21,9 +34,6 @@
         <div class="logo-container"></div>
         <div class="logo-container"></div>
     </div>
-    <!-- <audio id="logoAudio" type="audio/mpeg" controls>
-         <source src="pickup.mp3" type="audio/mpeg">
-    </audio> -->
 
     <script src="logo.js"></script>
 
