--- a/logo.html
+++ b/logo.html
@@ -12,7 +12,7 @@
         <label for="logo-categories">Select a Category</label>
         <select name="categories" id="logo-categories">
             <option value="">--Please select a Category--</option>
-            <option value="Companies">Companies</option>
+            <option value="Corporate">Companies</option>
             <option value="Landmarks">Landmarks</option>
             <option value="Baseball">Baseball</option>
             <option value="Basketball">Basketball</option>
